<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/layout_margin10dp"
    android:paddingRight="@dimen/layout_margin10dp"
    android:paddingTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="9">

            <TextView
                style="@style/heading_text_view_style"
                android:id="@+id/parcel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/parcel_customer_name"
                android:textColor="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/parcel_name">

                <TextView
                    style="@style/heading_text_view_style"
                    android:id="@+id/customer_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/parcel_customer_id"
                     />

                <TextView
                    style="@style/heading_text_view_style"
                    android:id="@+id/phone_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentRight="true"
                    android:text="656 666 666"
                   />


            </RelativeLayout>
        </RelativeLayout>

        <ImageButton
            android:id="@+id/call_action"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_gravity="bottom"
            android:src="@mipmap/callicon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            style="@style/heading_text_view_style"
            android:id="@+id/barcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/colorlightyellow"
            android:maxLines="1"


            android:padding="10dp"

            android:text="#3241234124312341" />

        <TextView

            android:id="@+id/payment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/redColor"
            android:gravity="center"
            android:maxLines="1"
            android:text="100k"
            android:textColor="@color/white" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="3dp">

        <TextView
            style="@style/heading_text_view_style"
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="2"
            android:text="@string/parcel_customer_address"

            />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:visibility="gone" />


</LinearLayout>