<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.inerun.dropinsta.activity.DeliveryDashBoardActivity"
    tools:showIn="@layout/activity_home">

    <include layout="@layout/error_layout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/headerlayout" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@+id/header_root"
            android:layout_margin="@dimen/layout_margin10dp"
            android:orientation="vertical"
            android:weightSum="10"

            >

            <RelativeLayout
                android:id="@+id/search_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@color/colorPrimary"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginRight="@dimen/layout_margin5dp"
                    android:src="@mipmap/ic_action_search"
                    android:layout_alignParentLeft="true"
                    />

                <TextView
                    android:id="@+id/search_title"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:layout_toRightOf="@+id/search_icon"
                    android:text="@string/customer_id_search"
                    android:textColor="@color/white"

                    android:textSize="@dimen/text_size18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/total_parcel_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@color/colorGray">

                <TextView
                    android:id="@+id/total_parcel_title"
                    style="@style/dash_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/total_parcels" />

                <TextView
                    android:id="@+id/total_parcel_count"
                    style="@style/dash_count_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/total_parcel_title"


                    android:text="20" />


            </RelativeLayout>

            <LinearLayout
                android:id="@+id/count_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="4"
                android:orientation="horizontal"
                android:weightSum="2"

                >

                <LinearLayout
                    android:id="@+id/delivery_parcel_lay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/greenColor"
                    android:orientation="vertical"
                    android:weightSum="10"

                    >

                    <TextView
                        android:id="@+id/dash_delivered_num"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="6"
                        android:gravity="center_horizontal|bottom"
                        android:text="20"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dashtextsize" />
                    <!-- android:gr="true"-->

                    <TextView
                        android:id="@+id/dash_delivered_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_below="@+id/dash_delivered_num"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="@string/delivered"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dashtexttitlesize"

                        />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pending_parcel_lay"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/redColor"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <TextView
                        android:id="@+id/dash_pending_num"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="6"
                        android:gravity="center_horizontal|bottom"
                        android:text="100"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dashtextsize" />


                    <TextView
                        android:id="@+id/dash_pending_title"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_below="@+id/dash_delivered_num"
                        android:layout_centerHorizontal="true"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:text="@string/pending"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dashtexttitlesize" />


                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:id="@+id/payment_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="2"
                android:background="@color/colorGray">

                <TextView
                    android:id="@+id/payment_title"
                    style="@style/dash_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:text="@string/payment_collection" />

                <TextView
                    android:id="@+id/payment_count"
                    style="@style/dash_count_style"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/payment_title"
                    android:text="1000"


                    android:textSize="@dimen/text_size28sp" />


            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>