<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_appbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <LinearLayout
            android:id="@+id/item_rootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_margin10dp"
            android:paddingRight="@dimen/layout_margin10dp"
            android:paddingTop="05dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="9">

                    <TextView
                        style="@style/heading_text_view_style"
                        android:id="@+id/parcel_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/parcel_customer_name"
                        android:textColor="@color/colorPrimary" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/parcel_name">

                        <TextView
                            style="@style/heading_text_view_style"
                            android:id="@+id/customer_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/parcel_customer_id"
                            />

                        <TextView
                            style="@style/heading_text_view_style"
                            android:id="@+id/phone_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_alignParentRight="true"

                            />


                    </RelativeLayout>
                </RelativeLayout>

                <ImageButton
                    android:id="@+id/call_action"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:layout_gravity="bottom"
                    android:src="@mipmap/callicon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <TextView
                    style="@style/heading_text_view_style"
                    android:id="@+id/barcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/colorlightyellow"
                    android:maxLines="1"


                    android:padding="10dp"

                   />

                <TextView

                    android:id="@+id/payment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/redColor"
                    android:gravity="center"
                    android:maxLines="1"

                    android:textColor="@color/white" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="3dp">

                <TextView
                    style="@style/heading_text_view_style"
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@string/parcel_customer_address"

                    />


            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/source_add_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_rootLayout"
            android:layout_marginLeft="@dimen/layout_margin10dp"
            android:layout_marginRight="@dimen/layout_margin10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Source City" />

            <TextView
                android:id="@+id/source_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                 />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/type_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/source_add_lay"
            android:layout_marginLeft="@dimen/layout_margin10dp"
            android:layout_marginRight="@dimen/layout_margin10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Parcel Type" />

            <TextView
                android:id="@+id/parcel_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
               />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/special_ins_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/type_lay"
            android:layout_marginLeft="@dimen/layout_margin10dp"
            android:layout_marginRight="@dimen/layout_margin10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Special Instructions" />

            <TextView
                android:id="@+id/special_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/delivery_status_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/special_ins_lay"
            android:layout_marginLeft="@dimen/layout_margin10dp"
            android:layout_marginRight="@dimen/layout_margin10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Delivery Status" />

            <TextView
                android:id="@+id/delivery_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/delivery_comment_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delivery_status_lay"
            android:layout_marginLeft="@dimen/layout_margin10dp"
            android:layout_marginRight="@dimen/layout_margin10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Delivery Comment" />

            <TextView
                android:id="@+id/delivery_comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
              />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/receiver_name_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delivery_comment_lay"
            android:layout_marginLeft="@dimen/layout_margin10dp"
            android:layout_marginRight="@dimen/layout_margin10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Delivered To" />

            <TextView
                android:id="@+id/receiver_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Amit Rathi" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="@dimen/layout_margin10dp"
            android:layout_marginRight="@dimen/layout_margin10dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="2">

            <Button
                android:id="@+id/parcel_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="Update"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/parcel_delivered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:text="Delivered"
                android:textColor="@color/white" />


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>